# BEETES---Wyszukiwanie-nadajnikow

./: 1.csv  1.tsv  2.csv  2020-02-25_16-23_lat_50.3657432_lon_18.87153251609449.json  2020-02-25_16-30_lat_50.62347845_lon_16.51913281952592.json  26001-v4.0.csv  Arkusz kalkulacyjny bez tytułu.xlsx  README.md  adreslask.csv  bts.py  bts.spec  distance.json  distance.txt  dolnyslask.txt  gctr.py  gctr.txt  gctr.xls  gctr2.html  gctrautomatyczny.php  gctrftp.xls  gotowy.xlsx  lonslask.csv  lotslask.tsv  main.py  malopolska.txt  mapa.py  matemeatky  odle  pyproject.toml  slask.csv  slask.txt  slask.xlsx  start.py  test  txt.xls
bazy/: btsx.txt  cmd.py
untitled/: 1.tsv  BTS.py  bezstr.xlsx  btsx.csv  liczy.txt  matma  test.py
