[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["mayonek <mayonjobs@gmail.com>"]
description = ""
name = "bts"
version = "0.1.0"
[tool.poetry.dependencies]
geopy = "^1.21"
pandas = "^1.0"
python = "^3.7"
substring = "^0.2.0"
[tool.poetry.dev-dependencies]
